--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Rafael M. 
+          <span class="text-primary">Balanquet</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+        <div class="subheading mb-5">1329 Main St. · Pittsburgh, PA 15215 · (412) 522-7677 ·
           <a href="mailto:name@email.com">name@email.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
