--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">1329 Main St. · Pittsburgh, PA 15215 · (412) 522-7677 ·
           <a href="mailto:balanquetr@allegheny.edu">balanquetr@allegheny.edu</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am currently an Allegheny College student pursuing an undergraduate Bachelors degree in Economics, with a minor in Computer Science. I am experience with financial spreading and data analytics in business</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
