added linked in link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <p class="lead mb-5">I am currently an Allegheny College student pursuing an undergraduate Bachelors degree in Economics, with a minor in Computer Science. I am experience with financial spreading and data analytics in business</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/rafael-balanquet-2499aa138/">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="#">
