--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
+            <h3 class="mb-0">PNC Retail </h3>
             <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <p>Further developed discipline, time management and detail orientation in project management utilizing large data sets and significant time horizons. Developed ability to work under stress, follow orders, and respond to feedback to produce immediate improvement in work results. Worked alongside senior management on larger projects and proved to be an asset in developing new ideas for aging processes.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">May 2019 - August 2019</span>
           </div>
         </div>
 
