added second experience section and changed subheadings

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">PNC Retail </h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
+            <h3 class="mb-0">Retail Undergraduate Intern</h3>
+            <div class="subheading mb-3">PNC Bank</div>
             <p>Further developed discipline, time management and detail orientation in project management utilizing large data sets and significant time horizons. Developed ability to work under stress, follow orders, and respond to feedback to produce immediate improvement in work results. Worked alongside senior management on larger projects and proved to be an asset in developing new ideas for aging processes.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -106,9 +106,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Center for Business and Economics Fellow</h3>
+            <div class="subheading mb-3">Allegheny College</div>
+            <p>Improved leadership role skills with projects that I spearheaded for the CBE. Worked alongside Allegheny College Economics department faculty to conduct student learning sessions with individuals in industry. Improved teamwork skills working with a diverse group of students on their projects.•	Acted as an ambassador between the department and students in my role, bridging the gap that exists between the two and increasing student participation in economics related activities. Gained skills in marketing strategy through economic event promotion to Allegheny College students.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2011 - March 2013</span>
