--- a/index.html
+++ b/index.html
@@ -108,32 +108,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Center for Business and Economics Fellow</h3>
             <div class="subheading mb-3">Allegheny College</div>
-            <p>Improved leadership role skills with projects that I spearheaded for the CBE. Worked alongside Allegheny College Economics department faculty to conduct student learning sessions with individuals in industry. Improved teamwork skills working with a diverse group of students on their projects.•	Acted as an ambassador between the department and students in my role, bridging the gap that exists between the two and increasing student participation in economics related activities. Gained skills in marketing strategy through economic event promotion to Allegheny College students.</p>
+            <p>Improved leadership role skills with projects that I spearheaded for the CBE. Worked alongside Allegheny College Economics department faculty to conduct student learning sessions with individuals in industry. Improved teamwork skills working with a diverse group of students on their projects. Acted as an ambassador between the department and students in my role, bridging the gap that exists between the two and increasing student participation in economics related activities. Gained skills in marketing strategy through economic event promotion to Allegheny College students.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">April 2019 - May 2020</span>
           </div>
         </div>
 
@@ -149,24 +127,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
+            <h3 class="mb-0">Allegheny College</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <div>Economics - Finance Concentration</div>
+            <p>GPA: 3.7</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">August 2016 - May 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Fox Chapel Area High School</h3>
+            <p>GPA: 4.21</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2012 - May 2016</span>
           </div>
         </div>
 
