--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">1329 Main St. · Pittsburgh, PA 15215 · (412) 522-7677 ·
           <a href="mailto:balanquetr@allegheny.edu">balanquetr@allegheny.edu</a>
         </div>
-        <p class="lead mb-5">I am currently an Allegheny College student pursuing an undergraduate Bachelors degree in Economics, with a minor in Computer Science. I am experience with financial spreading and data analytics in business</p>
+        <p class="lead mb-5">I am currently an Allegheny College student pursuing an undergraduate Bachelors degree in Economics, with a minor in Computer Science. I have some experience with financial spreading and data analytics in business cases. I am planning on attending a two year credit underwriting program through First National Bank after graduation, and flourish my career from there.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/rafael-balanquet-2499aa138/">
             <i class="fab fa-linkedin-in"></i>
